Bug 1507744 - Respect word-break value set on an inline element. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D30174

--HG--
extra : moz-landing-system : lando